[gd_scene load_steps=12 format=1]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/light.png" type="Texture" id=2]
[ext_resource path="res://assets/Roboto-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/move-icon.png" type="Texture" id=4]
[ext_resource path="res://assets/magic-icon.png" type="Texture" id=5]
[ext_resource path="res://assets/sword-icon.png" type="Texture" id=6]
[ext_resource path="res://assets/shield-icon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="DynamicFont" id=4]

font/size = 40
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 540.361, 323.182 )
transform/scale = Vector2( 2.1, 0.95 )
texture = ExtResource( 2 )

[node name="Name" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 293.0
margin/bottom = 87.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="NameLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 100.0
margin/right = 236.0
margin/bottom = 169.0
custom_fonts/font = SubResource( 1 )
text = "Chat"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NameButton" type="Button" parent="."]

visibility/opacity = 0.7
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 290.0
margin/top = 0.0
margin/right = 559.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Submit"
flat = false

[node name="UpButton" type="Button" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 49.0
margin/top = 178.0
margin/right = -35.0
margin/bottom = 109.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "move"
flat = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="UpButton"]

transform/pos = Vector2( 39.14, 32.5 )
transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_up"
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="UpButton"]

visibility/opacity = 0.8
transform/pos = Vector2( 40, 25 )
texture = ExtResource( 4 )

[node name="LeftButton" type="Button" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 157.0
margin/top = 103.0
margin/right = 73.0
margin/bottom = 34.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "magic"
flat = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="LeftButton"]

transform/pos = Vector2( 39.14, 32.5 )
transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_left"
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="LeftButton"]

visibility/opacity = 0.8
transform/pos = Vector2( 45, 40 )
texture = ExtResource( 5 )

[node name="RightButton" type="Button" parent="."]

editor/display_folded = true
anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -61.0
margin/top = 102.0
margin/right = -145.0
margin/bottom = 33.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "attack"
flat = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="RightButton"]

transform/pos = Vector2( 39.14, 32.5 )
transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_right"
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="RightButton"]

visibility/opacity = 0.8
transform/pos = Vector2( 40, 40 )
texture = ExtResource( 6 )

[node name="DownButton" type="Button" parent="."]

editor/display_folded = true
anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 80.0
margin/right = -36.0
margin/bottom = 11.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "shield"
flat = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="DownButton"]

transform/pos = Vector2( 39.14, 32.5 )
transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_down"
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="DownButton"]

visibility/opacity = 0.8
transform/pos = Vector2( 40, 25 )
texture = ExtResource( 7 )

[node name="SelectButton" type="Button" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 69.0
margin/right = 184.0
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Select"
flat = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="SelectButton"]

transform/pos = Vector2( 40, 30 )
transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 3 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_select"
visibility_mode = 0

[node name="StartButton" type="Button" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 69.0
margin/right = 84.0
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start/Chat"
flat = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="StartButton"]

transform/pos = Vector2( 40, 30 )
transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 3 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_accept"
visibility_mode = 0

[node name="ZoomIn" type="Button" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 169.0
margin/right = 84.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Zoom In"
flat = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="ZoomIn"]

transform/pos = Vector2( 40, 30 )
transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 3 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_zoom_in"
visibility_mode = 0

[node name="ZoomOut" type="Button" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 169.0
margin/right = 184.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Zoom Out"
flat = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="ZoomOut"]

transform/pos = Vector2( 40, 30 )
transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 3 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_zoom_out"
visibility_mode = 0

[node name="Feedback" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 699.0
margin/top = 403.0
margin/right = 1011.0
margin/bottom = 511.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Feedback2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 443.0
margin/top = 381.0
margin/right = 674.0
margin/bottom = 403.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Seconds" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 354.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 55.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="button_down" from="NameButton" to="." method="_on_Button_button_down"]

[connection signal="button_down" from="UpButton" to="." method="_on_UpButton_button_down"]

[connection signal="button_down" from="LeftButton" to="." method="_on_LeftButton_button_down"]

[connection signal="button_down" from="RightButton" to="." method="_on_RightButton_button_down"]

[connection signal="button_down" from="DownButton" to="." method="_on_DownButton_button_down"]

[connection signal="button_down" from="SelectButton" to="." method="_on_SelectButton_button_down"]

[connection signal="button_down" from="StartButton" to="." method="_on_StartButton_button_down"]


